--- a/examples/example-datagrid/package.json
+++ b/examples/example-datagrid/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@lumino/example-datagrid",
-  "version": "2.1.4-alpha.0",
+  "version": "2.1.4",
   "private": true,
   "scripts": {
     "build": "tsc && rollup -c",
     "clean": "rimraf build"
   },
   "dependencies": {
-    "@lumino/datagrid": "^2.3.0-alpha.0",
-    "@lumino/default-theme": "^2.1.4-alpha.0",
-    "@lumino/dragdrop": "^2.1.3",
-    "@lumino/widgets": "^2.3.1-alpha.0"
+    "@lumino/datagrid": "^2.3.0",
+    "@lumino/default-theme": "^2.1.4",
+    "@lumino/dragdrop": "^2.1.4",
+    "@lumino/widgets": "^2.3.1"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
