--- a/examples/example-dockpanel/package.json
+++ b/examples/example-dockpanel/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@lumino/example-dockpanel",
-  "version": "2.1.4-alpha.0",
+  "version": "2.1.4",
   "private": true,
   "scripts": {
     "build": "tsc && rollup -c",
     "clean": "rimraf build"
   },
   "dependencies": {
-    "@lumino/commands": "^2.1.3",
-    "@lumino/default-theme": "^2.1.4-alpha.0",
-    "@lumino/dragdrop": "^2.1.3",
+    "@lumino/commands": "^2.2.0",
+    "@lumino/default-theme": "^2.1.4",
+    "@lumino/dragdrop": "^2.1.4",
     "@lumino/messaging": "^2.0.1",
-    "@lumino/widgets": "^2.3.1-alpha.0"
+    "@lumino/widgets": "^2.3.1"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
