--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/datagrid",
-  "version": "2.3.0-alpha.0",
+  "version": "2.3.0",
   "description": "Lumino Tabular Data Grid",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -55,11 +55,11 @@
     "@lumino/coreutils": "^2.1.2",
     "@lumino/disposable": "^2.1.2",
     "@lumino/domutils": "^2.0.1",
-    "@lumino/dragdrop": "^2.1.3",
+    "@lumino/dragdrop": "^2.1.4",
     "@lumino/keyboard": "^2.0.1",
     "@lumino/messaging": "^2.0.1",
     "@lumino/signaling": "^2.1.2",
-    "@lumino/widgets": "^2.3.1-alpha.0"
+    "@lumino/widgets": "^2.3.1"
   },
   "devDependencies": {
     "@lumino/buildutils": "^2.0.1",
