--- a/packages/default-theme/package.json
+++ b/packages/default-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/default-theme",
-  "version": "2.1.4-alpha.0",
+  "version": "2.1.4",
   "description": "Lumino Default Theme",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -23,8 +23,8 @@
     "url": "https://github.com/jupyterlab/lumino.git"
   },
   "dependencies": {
-    "@lumino/dragdrop": "^2.1.3",
-    "@lumino/widgets": "^2.3.1-alpha.0"
+    "@lumino/dragdrop": "^2.1.4",
+    "@lumino/widgets": "^2.3.1"
   },
   "publishConfig": {
     "access": "public"
