--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lumino/widgets",
-  "version": "2.3.1-alpha.0",
+  "version": "2.3.1",
   "description": "Lumino Widgets",
   "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
@@ -55,11 +55,11 @@
   },
   "dependencies": {
     "@lumino/algorithm": "^2.0.1",
-    "@lumino/commands": "^2.1.3",
+    "@lumino/commands": "^2.2.0",
     "@lumino/coreutils": "^2.1.2",
     "@lumino/disposable": "^2.1.2",
     "@lumino/domutils": "^2.0.1",
-    "@lumino/dragdrop": "^2.1.3",
+    "@lumino/dragdrop": "^2.1.4",
     "@lumino/keyboard": "^2.0.1",
     "@lumino/messaging": "^2.0.1",
     "@lumino/properties": "^2.0.1",
