--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
   "singleQuote": true,
   "trailingComma": "none",
-  "arrowParens": "avoid",
-  "endOfLine": "crlf"
+  "arrowParens": "avoid"
 }
