--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,6 +5,13 @@ on:
     branches: [main]
   pull_request:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
+env:
+  PLAYWRIGHT_BROWSERS_PATH: ${{ github.workspace }}/pw-browsers
+
 jobs:
   test:
     name: JS
@@ -12,15 +19,22 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        browser: [chrome-headless, firefox-headless, webkit-headless]
-        exclude:
-          # Playwright webkit binary is not compatible with ubuntu
-          - os: ubuntu-latest
-            browser: webkit-headless
+        browser: [chrome, firefox, webkit]
+        # exclude:
+        #   # Playwright webkit binary is not compatible with ubuntu
+        #   - os: ubuntu-latest
+        #     browser: webkit
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+
+      - name: Set up browser cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ${{ github.workspace }}/pw-browsers
+          key: ${{ matrix.os }}-${{ matrix.browser }}-${{ hashFiles('./yarn.lock') }}
 
       - name: Install dependencies
         shell: bash
@@ -34,7 +48,7 @@ jobs:
         run: |
             set -eux
             yarn build
-            yarn build:test
+            yarn playwright install ${{ matrix.browser }}
 
       - name: Run Tests
         run: |
@@ -42,9 +56,6 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-
-    env:
-      PLAYWRIGHT_BROWSERS_PATH: ${{ github.workspace }}/pw-browsers
 
     steps:
       - uses: actions/checkout@v4
@@ -55,7 +66,7 @@ jobs:
         with:
           path: |
             ${{ github.workspace }}/pw-browsers
-          key: ubuntu-latest-${{ hashFiles('./yarn.lock') }}
+          key: ubuntu-latest-chromium-${{ hashFiles('./yarn.lock') }}
 
       - name: Install dependencies
         shell: bash
