--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clean": "lerna run clean",
     "clean:examples": "lerna run clean --scope \"@lumino/example-*\"",
     "clean:src": "lerna run clean --scope \"@lumino/!(test-|example-)*\"",
-    "clean:tests": "lerna run clean:tests",
+    "clean:test": "lerna run clean:test",
     "predocs": "lerna run build:src",
     "docs": "typedoc",
     "eslint": "eslint --ext .js,.jsx,.ts,.tsx --cache --fix .",
@@ -31,14 +31,11 @@
     "prettier:check": "prettier --check \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
     "publish": "npm run clean && npm run build:dist && node scripts/tag-versions.js && lerna publish --yes -m \"Publish\" from-package",
     "remove:dependency": "remove-dependency",
-    "test": "lerna run test --scope \"@lumino/!(example-)*\"",
-    "test:chrome": "lerna run test:chrome",
-    "test:chrome-headless": "lerna run test:chrome-headless",
+    "test": "lerna run test --concurrency 1 --scope \"@lumino/!(example-)*\"",
+    "test:chrome": "lerna run test:chrome --concurrency 1",
     "test:examples": "lerna run test --scope \"@lumino/example-*\"",
-    "test:firefox": "lerna run test:firefox",
-    "test:firefox-headless": "lerna run test:firefox-headless",
+    "test:firefox": "lerna run test:firefox --concurrency 1",
     "test:webkit": "lerna run test:webkit --concurrency 1",
-    "test:webkit-headless": "lerna run test:webkit-headless --concurrency 1",
     "update:dependency": "update-dependency --lerna",
     "update:versions": "lerna version --no-push --no-git-tag-version",
     "prepare": "husky install"
